Implemented bonus task - Warehouse Search & Filter API
